--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <md-toolbar>
-	<span>SSApp </span>
+	<span><h2>SSApp</h2></span>
 
   <!-- This fills the remaining space of the current row -->
   	<span class="fill-remaining-space"></span>
 		<img src="/assets/img/funnySanta.jpg" width="50px" height="20px">
   	<span>
-	<a routerLink="/registration">Registration</a>
-	<a routerLink="/login">Login</a>
+	<button md-raised-button routerLink="/registration" color="accent">Registration</button>
+	<button md-raised-button routerLink="/login" color="accent">Login</button>
 	</span>
 
 </md-toolbar>
