--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,10 +1,10 @@
 <div>
-  <form (ngSubmit)="onSubmit()" [formGroup]="form">
+  <form (ngSubmit)="onSubmit.emit(form.value)" [formGroup]="form">
     <div *ngFor="let question of questions" class="form-row">
       <df-question [question]="question" [form]="form"></df-question>
     </div>
     <div class="form-row">
-      <button type="submit" [disabled]="!form.valid">Save</button>
+      <button md-raised-button type="submit" [disabled]="!form.valid">Save</button>
     </div>
   </form>
   <div *ngIf="payLoad" class="form-row">
