--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,4 +1,8 @@
-<md-card>
-  registration works!
-  <dynamic-form [questions]="questions"></dynamic-form>
-</md-card>
+<section>
+	<md-toolbar>
+		<h3>Registration</h3>
+	</md-toolbar>
+	<md-card>
+	  <dynamic-form [questions]="questions" (onSubmit)="onSubmitRegistrationForm($event)"></dynamic-form>
+	</md-card>
+</section>
