set the app name as a link to the root

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <md-toolbar>
-	<span><h2>SSApp</h2></span>
+	<a [routerLink]="['/']">SSApp</a>
 
   <!-- This fills the remaining space of the current row -->
   	<span class="fill-remaining-space"></span>
