should show navbar with color

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<md-toolbar>
+<md-toolbar [color]="primary">
 	<a [routerLink]="['/']">SSApp</a>
 
   <!-- This fills the remaining space of the current row -->
