anchors only navigates user to different template

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,8 @@
   	<span class="fill-remaining-space"></span>
 		<img src="/assets/img/funnySanta.jpg" width="50px" height="20px">
   	<span>
-	<button md-raised-button routerLink="/registration" color="accent">Registration</button>
-	<button md-raised-button routerLink="/login" color="accent">Login</button>
+	<a md-raised-button routerLink="/registration" color="accent">Registration</a>
+	<a md-raised-button routerLink="/login" color="accent">Login</a>
 	</span>
 
 </md-toolbar>
