--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,6 @@
-<section>
-	<md-toolbar>
-		<h3>Login</h3>
-	</md-toolbar>
-	<md-card>
-	  <dynamic-form [questions]="questions"></dynamic-form>
-	</md-card>
-</section>
+<md-card>
+	<md-card-title>Login</md-card-title>
+	<md-card-content>
+		<dynamic-form [questions]="questions"></dynamic-form>
+	</md-card-content>
+</md-card>
