--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,8 +1,9 @@
-<section>
-	<md-toolbar>
-		<h3>Registration</h3>
-	</md-toolbar>
-	<md-card>
-	  <dynamic-form [questions]="questions" (onSubmit)="onSubmitRegistrationForm($event)"></dynamic-form>
-	</md-card>
-</section>
+<md-card>
+	<md-card-title>Registration</md-card-title>
+	<md-card-content>
+		<dynamic-form 
+			[questions]="questions" 
+			(onSubmit)="onSubmitRegistrationForm($event)"
+		></dynamic-form>
+	</md-card-content>
+</md-card>
