--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,18 @@
-<md-toolbar [color]="primary">
-	<a [routerLink]="['/']">SSApp</a>
+<md-toolbar color="primary">
+	<a [routerLink]="['/']" md-button>SSApp</a>
 
   <!-- This fills the remaining space of the current row -->
-  	<span class="fill-remaining-space"></span>
-		<img src="/assets/img/funnySanta.jpg" width="50px" height="20px">
-  	<span>
-	<a md-raised-button routerLink="/registration" color="accent">Registration</a>
-	<a md-raised-button routerLink="/login" color="accent">Login</a>
-	</span>
-
+  <span class="fill-remaining-space"></span>
+	<a 
+		md-raised-button 
+		[routerLink]="['/registration']"
+		color="accent"
+		class="navBtn"
+	>Registration</a>
+	<a 
+		md-raised-button 
+		[routerLink]="['/login']" 
+		color="accent"
+		class="navBtn"
+		>Login</a>
 </md-toolbar>
