changed the name

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
-	<a [routerLink]="['/']" md-button>SSApp</a>
+	<a [routerLink]="['/']" md-button>SecretSanta</a>
 
   <!-- This fills the remaining space of the current row -->
   <span class="fill-remaining-space"></span>
@@ -14,5 +14,5 @@
 		[routerLink]="['/login']" 
 		color="accent"
 		class="navBtn"
-		>Login</a>
+	>Login</a>
 </md-toolbar>
