--- a/src/app/dynamic-form-question/dynamic-form-question.component.html
+++ b/src/app/dynamic-form-question/dynamic-form-question.component.html
@@ -1,10 +1,11 @@
 <div [formGroup]="form">
   <div [ngSwitch]="question.controlType">
-    <md-input *ngSwitchCase="'textbox'" placeholder="{{question.label}}" [formControlName]="question.key"
-            [id]="question.key" [type]="question.type" required>
-	</md-input>
-    <!-- <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
-      <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
-    </select> -->
+    <md-input *ngSwitchCase="'textbox'" 
+      placeholder="{{question.label}}" 
+      [formControlName]="question.key"
+      [id]="question.key" 
+      [type]="question.type" 
+      required>
+    </md-input>
   </div>
 </div>
