resolved warnings on ng text

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <md-card>
 	<md-card-title>Login</md-card-title>
 	<md-card-content>
-		<dynamic-form 
+		<app-dynamic-form 
 			[questions]="questions"
 			(onSubmit)="onSubmitLoginForm($event)"
-		></dynamic-form>
+		></app-dynamic-form>
 	</md-card-content>
 </md-card>
