--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,9 +1,9 @@
 <md-card>
 	<md-card-title>Registration</md-card-title>
 	<md-card-content>
-		<dynamic-form 
+		<app-dynamic-form 
 			[questions]="questions" 
 			(onSubmit)="onSubmitRegistrationForm($event)"
-		></dynamic-form>
+		></app-dynamic-form>
 	</md-card-content>
 </md-card>
