--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,7 +1,7 @@
 <div>
   <form (ngSubmit)="onSubmit.emit(form.value)" [formGroup]="form">
     <div *ngFor="let question of questions" class="form-row">
-      <df-question [question]="question" [form]="form"></df-question>
+      <app-question [question]="question" [form]="form"></app-question>
     </div>
     <div class="form-row">
       <button md-raised-button type="submit" [disabled]="!form.valid">submit</button>
